# sor

./: 06ecological_acs_pl--EITYPE--2x2--RACE--sor_ACS_pct--DEMOGROUPS--brazilian_ACS_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--sor_ACS_pct--DEMOGROUPS--cabo_verdean_ACS_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--sor_ACS_pct--DEMOGROUPS--guyanese_ACS_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--sor_ACS_pct--DEMOGROUPS--mena_unhcr_ACS_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--sor_ACS_pct--DEMOGROUPS--mena_unsd_ACS_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--sor_ACS_pct--DEMOGROUPS--mena_world_bank_ACS_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--sor_PL_pct--DEMOGROUPS--hispanic_PL_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--white_PL_pct--DEMOGROUPS--mena_unhcr_ACS_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--white_PL_pct--DEMOGROUPS--mena_unsd_ACS_pct.json  06ecological_acs_pl--EITYPE--2x2--RACE--white_PL_pct--DEMOGROUPS--mena_world_bank_ACS_pct.json  06ecological_acs_pl--EITYPE--2x4--RACE--Brazilian-Non-Brazilian--DEMOGROUPS--SOR0-W0-B0-Other.json  06ecological_acs_pl.csv  25ecological_acs_pl--EITYPE--2x2--RACE--black_PL_pct--DEMOGROUPS--cabo_verdean_ACS_pct.json  25ecological_acs_pl--EITYPE--2x2--RACE--hispanic_PL_pct--DEMOGROUPS--belizean_ACS_pct.json  25ecological_acs_pl--EITYPE--2x2--RACE--hispanic_PL_pct--DEMOGROUPS--brazilian_ACS_pct.json  25ecological_acs_pl--EITYPE--2x2--RACE--hispanic_PL_pct--DEMOGROUPS--guyanese_ACS_pct.json  25ecological_acs_pl--EITYPE--2x2--RACE--sor_ACS_pct--DEMOGROUPS--belizean_ACS_pct.json  (+80 more)
(+375 files in other folders)
