[project]
name = "sum25-pyei"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "census>=0.8.24",
    "click>=8.2.1",
    "geopandas>=1.1.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pyarrow>=20.0.0",
    "pyei>=1.1.4",
    "us>=3.2.0",
]
